# atlas

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
crates/atlas-db/: Cargo.toml
crates/atlas-db-napi/: Cargo.toml
crates/atlas-db-napi/src/: lib.rs
crates/atlas-db/src/: lib.rs
crates/atlas-query/: Cargo.toml
crates/atlas-query-napi/: Cargo.toml
crates/atlas-query-napi/src/: lib.rs
crates/ream-query/: Cargo.toml
crates/ream-query-napi/: Cargo.toml
crates/ream-query-napi/src/: lib.rs
scripts/: copy-napi.mjs  guard-publish.mjs
src/: AtlasProvider.ts  BaseEntity.ts  BaseModel.ts  BaseRepository.ts  ModelQuery.ts  Transaction.ts  config.ts  configure.ts  errors.ts  events.ts  factories.ts  index.ts  lucid-schema.ts  metadata-keys.ts  orm.ts  seeders.ts
src/adapters/: NapiDbAdapter.ts  SqliteAdapter.ts
src/console/: factoryCommands.ts  migrationCommands.ts  schemaCheckCommand.ts  schemaDumpCommand.ts  schemaGenerateCommand.ts  seederCommands.ts
src/decorators/: entity.ts  hooks.ts  scope.ts
src/dialects/: Dialect.ts
src/naming/: NamingStrategy.ts
src/query/: DatabaseQueryBuilder.ts  DmlBuilder.ts  QueryBuilder.ts  RawQueryBuilder.ts  interpolate.ts  native.ts  operators.ts
src/schema/: Migration.ts  MigrationRunner.ts  Schema.ts  SchemaBuilder.ts  SchemaCheck.ts  SchemaDumper.ts  Seeder.ts  TableBuilder.ts  catalog.ts  introspect.ts  raw.ts  types.ts
src/services/: db.ts
src/testing/: DatabaseCleanup.ts  Factory.ts  TestDatabase.ts  index.ts
src/types/: relations.ts
src/utils/: casing.ts  dialectFromUrl.ts  identifier.ts  safePath.ts  transactionBrand.ts
tests/_support/: sync-mock-adapter.ts
tests/integration/: associate-rollback-sqlite.test.ts  audit-p1-p2-sqlite.test.ts  auto-timestamp-sqlite.test.ts  basemodel-sqlite.test.ts  belongsto-localkey-sqlite.test.ts  column-name-sqlite.test.ts  connect-retry.test.ts  createmany-atomicity-sqlite.test.ts  cross-dialect.test.ts  database-cleanup-usetransaction-sqlite.test.ts  datetime-chronos-sqlite.test.ts  db-query-builder-sqlite.test.ts  db-query-events-sqlite.test.ts  decimal-column.test.ts  dml-complex-where-sqlite.test.ts  domain-events-rollback-sqlite.test.ts  entity-repo-ref-sqlite.test.ts  factory-client-sqlite.test.ts  factory-relations-sqlite.test.ts  factory-tap-sqlite.test.ts  has-through-related-sqlite.test.ts  hook-order-sqlite.test.ts  join-onval-sqlite.test.ts  lucid-query-surface-sqlite.test.ts  m2m-atomicity-sqlite.test.ts  m2m-pivot-attributes-sqlite.test.ts  m2m-pivot-projection-sqlite.test.ts  m2m-relatedkey-sqlite.test.ts  m2m-sync-sqlite.test.ts  make-migration-command.test.ts  manual-tx-events-sqlite.test.ts  manual-tx-state-restore-sqlite.test.ts  migration-advisory-lock.test.ts  migration-commands-sqlite.test.ts  migration-defer-sqlite.test.ts  migration-disable-rollback-prod.test.ts  migration-disable-transactions-sqlite.test.ts  migration-fresh-drops-tables-sqlite.test.ts  migration-wipe-truncate-sqlite.test.ts  model-client-option-sqlite.test.ts  (+37 more)
tests/unit/: atlas-provider.test.ts  atlas.test.ts  base-entity.test.ts  base-repository-guard.test.ts  (+27 more)
(+10 files in other folders)
