[package]
name = "atlas-db-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for the Ream database driver"

[lib]
crate-type = ["cdylib"]

[dependencies]
atlas-db = { path = "../atlas-db" }
ream-napi-core = { path = "../../../ream/crates/ream-napi-core" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "async"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
