[package]
name = "atlas-db-napi"
version = "0.1.11"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for the Ream database driver"

[lib]
crate-type = ["cdylib"]

[dependencies]
atlas-db = { path = "../atlas-db" }
# git dep (not a relative cross-submodule path) so atlas builds in an isolated
# CI checkout. ream is public; ream-napi-core is pinned to its v0.1.0 tag.
# Consumers get prebuilt .node binaries, so this only matters at build time.
ream-napi-core = { git = "https://github.com/C9up/ream", tag = "v0.1.4" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "async"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
