[package]
name = "atlas-db"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async database driver for the Ream framework — SQLite, PostgreSQL, MySQL via sqlx"

[lib]
crate-type = ["lib"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "any", "json", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encode BLOB/BYTEA bytes as base64 inside the JSON napi envelope ({"$bytes": …}).
base64 = "0.22"

# MSSQL support via tiberius (optional, separate from sqlx)
# tiberius = { version = "0.12", optional = true }

[features]
default = ["sqlite", "postgres", "mysql"]
sqlite = []
postgres = []
mysql = []
# mssql = ["dep:tiberius"]
