[package]
name = "atlas-query-napi"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for atlas-query SQL compiler"

[lib]
crate-type = ["cdylib"]

[dependencies]
atlas-query = { path = "../atlas-query" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
